--- a/reports/report_680000000.html
+++ b/reports/report_680000000.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jun 1, 2018 08:32:53 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jun 5, 2018 11:23:31 PM</span>
 				</a>
 			</li>
 			<li>
@@ -135,10 +135,10 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='33.333%'><span class='strong'>1</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='25%'><span class='strong'>1</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
-					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='66.667%'>2</span> others
+					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='75%'>3</span> others
 				</div>
 			</div>
 		</div>
@@ -155,15 +155,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Invalid password.</span>
-						<span class='test-time'>Jun 1, 2018 08:32:53 PM</span>
+						<span class='test-name'>Login and password are valid.</span>
+						<span class='test-time'>Jun 5, 2018 11:23:32 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 1, 2018 08:32:53 PM</span>
-	<span class='label end-time'>Jun 1, 2018 08:33:14 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 20s+735ms</span>
+	<span class='label start-time'>Jun 5, 2018 11:23:32 PM</span>
+	<span class='label end-time'>Jun 5, 2018 11:23:52 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 20s+828ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -177,18 +177,23 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:33:08 PM</td>
-					<td class='step-details'>The website has started.<img data-featherlight='screenshots/screenshot7395407007712852914.png' width='10%' src='' data-src='screenshots/screenshot7395407007712852914.png'></td>
+					<td class='timestamp'>11:23:44 PM</td>
+					<td class='step-details'>O site iniciou.<img data-featherlight='screenshots/screenshot8650230413468721839.png' width='10%' src='' data-src='screenshots/screenshot8650230413468721839.png'></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:33:13 PM</td>
-					<td class='step-details'>Incorrect password warning.<img data-featherlight='screenshots/screenshot2018706224706147735.png' width='10%' src='' data-src='screenshots/screenshot2018706224706147735.png'></td>
+					<td class='timestamp'>11:23:48 PM</td>
+					<td class='step-details'>Login efetuado com sucesso.<img data-featherlight='screenshots/screenshot6258692348996277149.png' width='10%' src='' data-src='screenshots/screenshot6258692348996277149.png'></td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:23:51 PM</td>
+					<td class='step-details'>Extrato consultado com sucesso.<img data-featherlight='screenshots/screenshot5179098004571566757.png' width='10%' src='' data-src='screenshots/screenshot5179098004571566757.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>8:33:14 PM</td>
-					<td class='step-details'>The error message was displayed correctly.<img data-featherlight='screenshots/screenshot7321049046959092133.png' width='10%' src='' data-src='screenshots/screenshot7321049046959092133.png'></td>
+					<td class='timestamp'>11:23:52 PM</td>
+					<td class='step-details'>Extrato consultado com sucesso.<img data-featherlight='screenshots/screenshot4376052336249243360.png' width='10%' src='' data-src='screenshots/screenshot4376052336249243360.png'></td>
 				</tr>
 			</tbody>
 		</table>
@@ -236,25 +241,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>3</div>
+					<div class='panel-lead'>4</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jun 1, 2018 08:32:53 PM</div>
+					<div class='panel-lead'>Jun 5, 2018 11:23:31 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jun 1, 2018 08:33:17 PM</div>
+			 		<div class='panel-lead'>Jun 5, 2018 11:23:53 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>23,975ms</div>
+					<div class='panel-lead'>22,121ms</div>
 				</div>
 			</div>
 		</div>
@@ -281,7 +286,7 @@
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
-				infoChild: 2,
+				infoChild: 3,
 				exceptionsChild: 0,
 				
 				passGrandChild: 0,
