--- a/reports/report_771000000.html
+++ b/reports/report_771000000.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jun 1, 2018 08:32:02 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jun 5, 2018 11:17:27 PM</span>
 				</a>
 			</li>
 			<li>
@@ -135,10 +135,10 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='33.333%'><span class='strong'>1</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='25%'><span class='strong'>1</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
-					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='66.667%'>2</span> others
+					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='75%'>3</span> others
 				</div>
 			</div>
 		</div>
@@ -155,15 +155,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Invalid login.</span>
-						<span class='test-time'>Jun 1, 2018 08:32:02 PM</span>
+						<span class='test-name'>Login and password are valid.</span>
+						<span class='test-time'>Jun 5, 2018 11:17:28 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 1, 2018 08:32:02 PM</span>
-	<span class='label end-time'>Jun 1, 2018 08:32:25 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 23s+252ms</span>
+	<span class='label start-time'>Jun 5, 2018 11:17:28 PM</span>
+	<span class='label end-time'>Jun 5, 2018 11:17:55 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 27s+100ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -177,18 +177,23 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:32:19 PM</td>
-					<td class='step-details'>The website has started.<img data-featherlight='screenshots/screenshot4781396714347176541.png' width='10%' src='' data-src='screenshots/screenshot4781396714347176541.png'></td>
+					<td class='timestamp'>11:17:45 PM</td>
+					<td class='step-details'>O site iniciou.<img data-featherlight='screenshots/screenshot8623508537499242853.png' width='10%' src='' data-src='screenshots/screenshot8623508537499242853.png'></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:32:25 PM</td>
-					<td class='step-details'>Incorrect login warning.<img data-featherlight='screenshots/screenshot1068975574273712879.png' width='10%' src='' data-src='screenshots/screenshot1068975574273712879.png'></td>
+					<td class='timestamp'>11:17:51 PM</td>
+					<td class='step-details'>Login efetuado com sucesso.<img data-featherlight='screenshots/screenshot7047547299270250817.png' width='10%' src='' data-src='screenshots/screenshot7047547299270250817.png'></td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>11:17:53 PM</td>
+					<td class='step-details'>Extrato consultado com sucesso.<img data-featherlight='screenshots/screenshot8875575101598899222.png' width='10%' src='' data-src='screenshots/screenshot8875575101598899222.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>8:32:25 PM</td>
-					<td class='step-details'>The error message was displayed correctly.<img data-featherlight='screenshots/screenshot7742548528267828689.png' width='10%' src='' data-src='screenshots/screenshot7742548528267828689.png'></td>
+					<td class='timestamp'>11:17:55 PM</td>
+					<td class='step-details'>A mensagem de erro foi exibida corretamente.<img data-featherlight='screenshots/screenshot2711654024703890332.png' width='10%' src='' data-src='screenshots/screenshot2711654024703890332.png'></td>
 				</tr>
 			</tbody>
 		</table>
@@ -236,25 +241,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>3</div>
+					<div class='panel-lead'>4</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jun 1, 2018 08:32:02 PM</div>
+					<div class='panel-lead'>Jun 5, 2018 11:17:27 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jun 1, 2018 08:32:28 PM</div>
+			 		<div class='panel-lead'>Jun 5, 2018 11:17:56 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>26,554ms</div>
+					<div class='panel-lead'>28,440ms</div>
 				</div>
 			</div>
 		</div>
@@ -281,7 +286,7 @@
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
-				infoChild: 2,
+				infoChild: 3,
 				exceptionsChild: 0,
 				
 				passGrandChild: 0,
