Projeto finalizado e entregue dia 14/06/2018 para o S2B

--- a/reports/report_561000000.html
+++ b/reports/report_561000000.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jun 6, 2018 09:36:28 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jun 12, 2018 03:13:29 PM</span>
 				</a>
 			</li>
 			<li>
@@ -155,15 +155,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Invalid login.</span>
-						<span class='test-time'>Jun 6, 2018 09:36:29 PM</span>
+						<span class='test-name'>Option to invest are valid.</span>
+						<span class='test-time'>Jun 12, 2018 03:13:29 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 6, 2018 09:36:29 PM</span>
-	<span class='label end-time'>Jun 6, 2018 09:36:50 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 21s+370ms</span>
+	<span class='label start-time'>Jun 12, 2018 03:13:29 PM</span>
+	<span class='label end-time'>Jun 12, 2018 03:13:58 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 28s+213ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -177,18 +177,18 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>9:36:43 PM</td>
-					<td class='step-details'>O site iniciou.<img data-featherlight='screenshots/screenshot6184009717668244377.png' width='10%' src='' data-src='screenshots/screenshot6184009717668244377.png'></td>
+					<td class='timestamp'>3:13:52 PM</td>
+					<td class='step-details'>O site iniciou.<img data-featherlight='screenshots/screenshot7182313291170717629.png' width='10%' src='' data-src='screenshots/screenshot7182313291170717629.png'></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>9:36:49 PM</td>
-					<td class='step-details'>Aviso de Login incorreto.<img data-featherlight='screenshots/screenshot8527383712273200066.png' width='10%' src='' data-src='screenshots/screenshot8527383712273200066.png'></td>
+					<td class='timestamp'>3:13:55 PM</td>
+					<td class='step-details'>Selecionando opcao investir.<img data-featherlight='screenshots/screenshot621108364795904620.png' width='10%' src='' data-src='screenshots/screenshot621108364795904620.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>9:36:50 PM</td>
-					<td class='step-details'>Mensagem de login invalido foi exibida corretamente.<img data-featherlight='screenshots/screenshot9051385968967326040.png' width='10%' src='' data-src='screenshots/screenshot9051385968967326040.png'></td>
+					<td class='timestamp'>3:13:58 PM</td>
+					<td class='step-details'>Mensagem de erro exibida corretamente.<img data-featherlight='screenshots/screenshot6249720821173632469.png' width='10%' src='' data-src='screenshots/screenshot6249720821173632469.png'></td>
 				</tr>
 			</tbody>
 		</table>
@@ -242,19 +242,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jun 6, 2018 09:36:28 PM</div>
+					<div class='panel-lead'>Jun 12, 2018 03:13:29 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jun 6, 2018 09:36:53 PM</div>
+			 		<div class='panel-lead'>Jun 12, 2018 03:13:58 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>24,660ms</div>
+					<div class='panel-lead'>29,304ms</div>
 				</div>
 			</div>
 		</div>
